--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
 	<title>Notas</title>
 	<link rel="stylesheet" href="bootstrap.min.css">
 	<link rel="stylesheet" href="sweetalert2.min.css">
-	<!-- <script src="jquery-3.1.1.min.js"></script> -->
+	<script src="jquery-3.1.1.min.js"></script>
 	<script src="angular.min.js"></script>
 	<script src="angular-local-storage.js"></script>
 	<script src="sweetalert2.min.js"></script>
 	<script src="miscript.js"></script>
+
+	<script>
+	String.prototype.convertirURL = function() {
+	  return this.replace(/[A-Za-z]+:\/\/[A-Za-z0-9-_]+\.[A-Za-z0-9-_:%&~\?\/.=]+/g, function(url) {
+	    return url.link(url);
+	  });
+	};
+	</script>
 
 	<style>
 		.prestyle {
@@ -85,7 +93,7 @@
 
 
 
-		<div class="col-xs-8">
+		<div class="col-xs-8" id="listadogral">
 			<!--
 			<ul>
 				<li ng-repeat="main in vlist | orderBy : '': true | filter: q">
@@ -97,7 +105,7 @@
 			<div class="panel panel-default" ng-repeat="main in vlist | orderBy : '': true | filter: q">
 			  <ul class="list-group">
 			    <li class="list-group-item"><h4 contenteditable="false">{{ main.title | uppercase }}</h4></li>
-			    <li class="list-group-item"><div class="prestyle" contenteditable="false"  ng-bind-html="main.nota | html"></div></li>
+			    <li class="list-group-item"><div class="prestyle" contenteditable="false"  ng-bind-html="main.nota.convertirURL() | html"></div></li>
 			    <li class="list-group-item"><em class="text-muted">{{ main.fecha | date: 'short' }}</em></li>
 			  </ul>
 			</div>
